--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -61,13 +61,17 @@ Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 Server = http://repo.archlinux.fr/$arch
 
-[infinality-bundle]
-Server = http://bohoomil.com/repo/$arch
-
 [catalyst]
 Server = http://catalyst.wirephire.com/repo/catalyst/$arch
 
+[infinality-bundle]
+Server = http://bohoomil.com/repo/$arch
 
+[infinality-bundle-multilib]
+Server = http://bohoomil.com/repo/multilib/$arch
+
+[infinality-bundle-fonts]
+Server = http://bohoomil.com/repo/fonts
 
 ## Mirrors, if the primary server does not work or is too slow:
 #Server = http://70.239.162.206/catalyst-mirror/repo/catalyst/$arch
