--- a/etc/X11/xorg.conf.d/90-custom-kbd.conf
+++ b/etc/X11/xorg.conf.d/90-custom-kbd.conf
@@ -1,7 +1,1 @@
-Section "InputClass"
-     Identifier "system-keyboard"
-     MatchIsKeyboard "on"
-     Option "XkbLayout" "us"
-     Option "XkbModel" "pc104"
-     Option "XkbOptions" "shift:bothcapslock, caps:escape, compose:menu, keypad:pointerkeys"
-EndSection
+/etc/X11/xorg.conf.d/90-custom-kbd.conf
