--- a/etc/X11/xorg.conf.d/90-custom-kbd.conf
+++ b/etc/X11/xorg.conf.d/90-custom-kbd.conf
@@ -1,1 +1,7 @@
-/etc/X11/xorg.conf.d/90-custom-kbd.conf
+Section "InputClass"
+     Identifier "system-keyboard"
+     MatchIsKeyboard "on"
+     Option "XkbLayout" "us"
+     Option "XkbModel" "pc104"
+     Option "XkbOptions" "shift:both_capslock, caps:escape, compose:menu"
+EndSection
